solved issue #1 - overlapping of drop down

--- a/static/css/stylesheet.css
+++ b/static/css/stylesheet.css
@@ -49,7 +49,7 @@ body{
     justify-content: space-between;
     background-color: rgb(233, 233, 233)  ;
     position: relative;
-    z-index: 999999;
+    z-index: 9999;
 }
 .search-bar{
     margin-right: 50px;
@@ -65,15 +65,20 @@ margin-top:-160px
     font-weight: 400;
     padding-top: 35px ;
     text-align: center;
+    color: #00aa55 !important;
 }
-.card{
+.cardd{
     width:80%;
     border:none;
     outline: none;
     text-align: center;
-    background-color: #00aa55 !important;
-    color: white;
+    background-color:white;
+    color: black;
+    padding-bottom: 10px;
     font-size: 14px;
+    position: relative;
+    z-index: 9999;
+    margin-right:0;
 }
 .cards-grid{
     display: grid;
@@ -84,6 +89,9 @@ margin-top:-160px
     grid-column-gap: 20px;
     z-index: 9999;
     margin-bottom: 80px
+}
+.cards-grid a:hover{
+    transform: translateY(-20px);
 }
 .carousel-caption{
     padding-bottom: 60px !important;
